--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -25,7 +25,7 @@
 			<div class="col-sm-offset-4 col-sm-4">
 				<h3 class="text-center">用户登录</h3>
 				<input type="hidden" name="key" th:value="${key}">
-				<form class="form-horizontal form" method="post" action="login" id="loginForm">
+				<form class="form-horizontal form" id="loginForm">
 					<div class="form-group">
 						<label for="loginName" class="col-sm-2 control-label"style="white-space:nowrap">登录名</label>
 						<div class="col-sm-10">
